Upload final version html, js, css

--- a/Car game.html
+++ b/Car game.html
@@ -14,7 +14,7 @@
   </div>
   <div class="road">
 		<div class="textContainer">
-			<textarea id="outputBox" placeholder="System console"></textarea>
+			<textarea id="outputBox" placeholder="Let's START the car and have a drive!"></textarea>
 		</div>
 	</div>
   <div class="lower-part">
@@ -25,7 +25,11 @@
       <button class="btn" id="drive-btn">DRIVE</button>
       <button class="btn" id="addFuel-btn">ADD FUEL</button>
       <button class="btn" id="turn-btn">TURN</button>
-    </div>
+			<div id="fuel-cont">
+				<div id="fuel-level"></div>
+			</div>
+			<div id="fuel-label">FUEL</div>
+		</div>
   </div>
 </body>
 
